--- a/src/components/pages/Login.css
+++ b/src/components/pages/Login.css
@@ -19,7 +19,7 @@
   .login-title {
     font-size: 24px;
     font-weight: 500;
-    margin-bottom: 20px;
+    margin-bottom: 10px;
     color: #333;
   }
   
@@ -46,7 +46,7 @@
   .login-button {
     padding: 12px 20px;
     font-size: 16px;
-    background-color: #4285f4;
+    background-color: #f44242;
     color: white;
     border: none;
     border-radius: 5px;
